fix: the scrollbar style after chrome 121 update <https://developer.chrome.com/docs/css-ui/scrollbar-styling>

--- a/components/layouts/footer/_footer.module.scss
+++ b/components/layouts/footer/_footer.module.scss
@@ -1,7 +1,7 @@
 @import "@/app/globals.variables.module.scss";
 
 .footer {
-	@apply relative flex items-center justify-center w-full h-footer overflow-hidden;
+	@apply relative flex items-center justify-center w-full h-footer overflow-hidden bg-background;
 
 	box-shadow: 0 -2px 6px 3px theme("colors.background");
 	z-index: 1;
